--- a/src/styles.sass
+++ b/src/styles.sass
@@ -48,25 +48,9 @@ h2, h3, h4, h5, p, a, label
     color: black
     text-decoration: none
 
-/* Scrollbar */
+/* ## Scrollbar ## */
 ::-webkit-scrollbar 
-    width: 10px
-    height: 0px
-    
-::-webkit-scrollbar-track-piece:end 
-    background: transparent
-    margin-bottom: 30px
-
-::-webkit-scrollbar-track-piece:start
-    background: transparent
-    margin-top: 30px
-
-::-webkit-scrollbar-thumb:hover 
-  background: $tableColor
-
-::-webkit-scrollbar-track 
-    max-height: 50%
-    height: 50%
+    width: 00px
 
 /* Aktive Menupunkte */
 .active 
