--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
@@ -1,8 +1,28 @@
 @import './src/sass/var'
 @import './src/sass/window'
-    
-/* Komplette Seite */
-.scroll
-    height: auto
-    width: auto
-    overflow-y: scroll !important
+@import './src/sass/element'
+
+.fiveWindow::-webkit-scrollbar 
+    width: 0px
+
+.split
+    display: inline-block
+    width: 32%
+    margin-top: 10px
+    vertical-align: top
+
+.firstSplit,
+.secondSplit
+    margin-right: 10px
+
+.thirdSplit
+    margin-left: 10px
+
+.split p
+    display: inline-block
+    padding: 2px
+    vertical-align: top
+    width: 100%
+
+.dropDown select
+    text-align: center
