--- a/src/app/_hauptKomponente/f-angebot/f-angebot.component.sass
+++ b/src/app/_hauptKomponente/f-angebot/f-angebot.component.sass
@@ -1,3 +1,25 @@
 @import './src/sass/var'
 @import './src/sass/window'
+@import './src/sass/element'
     
+.split
+    display: inline-block
+    width: 32%
+    margin-top: 10px
+    vertical-align: top
+
+.firstSplit,
+.secondSplit
+    margin-right: 10px
+
+.thirdSplit
+    margin-left: 10px
+
+.split p
+    display: inline-block
+    padding: 2px
+    vertical-align: top
+    width: 100%
+
+.dropDown select
+    text-align: center
