--- a/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.sass
+++ b/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.sass
@@ -1,5 +1,7 @@
 @import './src/sass/var'
 @import './src/sass/window'
+@import './src/sass/element'
+
 
 /* ## Unternehmensseite ## */
 
@@ -27,27 +29,3 @@
     margin-top: 5px
     margin-bottom: 5px
     padding-left: 5px !important
-
-/* DropDown */
-.row select
-    width: 100%
-    height: 30px
-    border: 1px solid $borderColor
-    border-radius: 5px
-    cursor: pointer
-    outline: none
-    
-.speichern
-    width: 100%
-    text-align: center
-
-.speichern p
-    width: 33%
-    position: absolute
-    right: 0
-    bottom: 10px
-    border: 1px solid $borderColor
-    border-radius: 5px
-    padding-top: 5px
-    padding-bottom: 5px
-    cursor: pointer
